--- a/.htaccess
+++ b/.htaccess
@@ -41,11 +41,11 @@ RewriteRule ^newsletter-email-list.txt$ ./?do_action=nl_management_emailList_dow
 
 # 
 # pgCat
-RewriteRule ^cat-([0-9]*),([0-9]*)/(.*)$ ./?page=65&cat_id=$1&p=$2 [L]
+RewriteRule ^cat-([0-9]*),([0-9]*)/(.*)$ ./?page=65&cat_id=$1&p=$2&canonical_tag=1 [L]
 
 # 
 # pgItem
-RewriteRule ^([0-9]*)-(.*)$ ./?page=66&item_id=$1 [L]
+RewriteRule ^([0-9]*)-(.*)$ ./?page=66&item_id=$1&canonical_tag=1 [L]
 RewriteRule ^([0-9]*).html$ ./?page=66&item_id=$1&item_needs_to_be_redirected=1 [L]
 
 # 
@@ -54,7 +54,7 @@ RewriteRule ^new_item$ ./?page=14&do=pgItem_user&do1=form [L]
 
 # 
 # pgSearch
-RewriteRule ^tag/(.*)$ ./?page=67&q=$1&its_tag=1 [L]
+RewriteRule ^tag/(.*)$ ./?page=67&q=$1&its_tag=1&canonical_tag=1 [L]
 
 RewriteRule ^pk=(.*)$ ./?page=67&q=$1&tag_needs_to_be_redirected=1&its_tag=1 [L]
 RewriteRule ^t=(.*)/p=([0-9]*).html$ ./?page=67&q=$1&tag_needs_to_be_redirected=1&its_tag=1 [L]
