--- a/.htaccess
+++ b/.htaccess
@@ -14,6 +14,10 @@ RewriteRule ^captcha-(.*)\.png(.*)$ ./?do_action=captcha_build&captcha_name=$1 [
 RewriteRule ^contact$ ./?page=2 [L]
 
 # 
+# faq-1
+RewriteRule ^faq$ ./?page=20 [L]
+
+# 
 # layout-1
 RewriteRule ^page-([0-9]+).html$ ./?page=$1&canonical_tag=1 [L]
 
