--- a/.htaccess
+++ b/.htaccess
@@ -83,6 +83,11 @@ RewriteRule ^sitemap.xml$ ./?do_action=seo_sitemap [L]
 RewriteRule ^rss/([a-zA-Z0-9]+)\.xml$ ./?do_action=seo_rss&feed=$1 [L]
 
 # 
+# ticketbox-1
+RewriteRule ^tickets$ ./?page=14&do=ticketbox_user_list [L]
+RewriteRule ^ticket-([0-9]+)$ ./?page=14&do=ticketbox_user_list&do1=view&id=$1 [L]
+
+# 
 # user-1
 RewriteRule ^register$ ./?page=58 [L]
 RewriteRule ^register_do$ ./?page=59 [L]
