--- a/.htaccess
+++ b/.htaccess
@@ -62,8 +62,8 @@ RewriteRule ^cat-([0-9]*),([0-9]*)/(.*)$ ./?page=65&cat_id=$1&p=$2&canonical_tag
 RewriteRule ^([0-9]*)-(.*)$ ./?page=66&item_id=$1&canonical_tag=1 [L]
 RewriteRule ^([0-9]*).html$ ./?page=66&item_id=$1&item_needs_to_be_redirected=1 [L]
 
-RewriteCond %{HTTP_HOST} ^www.postgah.com$
-RewriteRule ^(.*)$ http://postgah.com/$1 [R=301,NC]
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
 # 
 # pgItem_user
