--- a/.htaccess
+++ b/.htaccess
@@ -34,7 +34,7 @@ Header set Cache-Control "max-age=31536050"
 </FilesMatch>
 
 # 
-# main.slug-1
+# slug-1
 <IfModule mod_rewrite.c>
 RewriteEngine On
 RewriteRule ^index\.php$ - [L]
