--- a/.htaccess
+++ b/.htaccess
@@ -21,7 +21,7 @@ RewriteRule ^([0-9]*).html$ ./?page=66&item_id=$1&item_needs_to_be_redirected=1 
 # End Section
 
 # 
-# main.etc-3
+# main-3
 <FilesMatch "\.(ico|pdf|jpg|jpeg|png|gif|html|htm|xml|txt|xsl)$">
 Header set Cache-Control "max-age=31536050"
 </FilesMatch>
